[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/StartingRoom/corridor (without door).png" type="Texture" id=1]
[ext_resource path="res://assets/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/StartingRoom/bus door.png" type="Texture" id=3]
[ext_resource path="res://Rooms/StartingRoom.gd" type="Script" id=4]
[ext_resource path="res://assets/StartingRoom/canteen door.png" type="Texture" id=5]
[ext_resource path="res://assets/Speech Text/SpeechText.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Fonts/ThaleahFat.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/Fonts/Smaller.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/Fonts/EvenSmaller.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/StartingRoom/interiorPack.png" type="Texture" id=10]
[ext_resource path="res://assets/StartingRoom/street door.png" type="Texture" id=11]
[ext_resource path="res://assets/AnxietyMeter/AnxietyMeter.tscn" type="PackedScene" id=12]

[sub_resource type="TileSet" id=1]
0/name = "interiorPack.png 0"
0/texture = ExtResource( 10 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 64, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "interiorPack.png 1"
1/texture = ExtResource( 10 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 32, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "interiorPack.png 2"
2/texture = ExtResource( 10 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 48, 48, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "interiorPack.png 3"
3/texture = ExtResource( 10 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 80, 0, 16, 22 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 159.137, 21.868 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.526, 50.0494 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19.8454, 8.6911 )

[node name="StartingRoom" type="Node2D"]
script = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="corridor (without door)" type="Sprite" parent="StaticBody2D"]
position = Vector2( 160.492, 49.0529 )
scale = Vector2( 0.456737, 0.646846 )
texture = ExtResource( 1 )

[node name="bus door" type="Sprite" parent="StaticBody2D"]
position = Vector2( 162.79, 48.2275 )
scale = Vector2( 0.456737, 0.650425 )
texture = ExtResource( 3 )

[node name="canteen door" type="Sprite" parent="StaticBody2D"]
position = Vector2( 222.003, 48.5386 )
scale = Vector2( 0.47951, 0.650021 )
texture = ExtResource( 5 )

[node name="street door" type="Sprite" parent="StaticBody2D"]
position = Vector2( 291.454, 48.3693 )
scale = Vector2( 0.459707, 0.643537 )
texture = ExtResource( 11 )

[node name="InteriorDeco" type="TileMap" parent="."]
position = Vector2( -59.173, 101 )
scale = Vector2( 0.591774, 0.894276 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -327670, 1, 0, -327667, 2, 0, -327664, 1, 0, -196588, 3, 0, -196582, 3, 0, -196575, 3, 0, -196569, 3, 0 )

[node name="TopLeft" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.890059, 0.992668 )
polygon = PoolVector2Array( 0.207684, 97.5393, 15.3438, 65.1648, 359.559, 65.7345, 359.138, 0.831429, 0.207687, 0.415789 )

[node name="Bottom" type="CollisionShape2D" parent="."]
position = Vector2( 160.191, 119.828 )
shape = SubResource( 2 )

[node name="Right" type="CollisionShape2D" parent="."]
position = Vector2( 322.136, 76.0391 )
shape = SubResource( 3 )

[node name="Door1" type="Area2D" parent="."]
scale = Vector2( 0.890059, 0.992668 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door1"]
position = Vector2( 182.999, 67.0757 )
shape = SubResource( 4 )

[node name="Door2" type="Area2D" parent="."]
position = Vector2( 36, 0 )
scale = Vector2( 0.890059, 0.992668 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door2"]
position = Vector2( 214.75, 67.0757 )
shape = SubResource( 4 )

[node name="Door3" type="Area2D" parent="."]
position = Vector2( 27, 0 )
scale = Vector2( 0.890059, 0.992668 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door3"]
position = Vector2( 297.529, 67.0757 )
shape = SubResource( 4 )

[node name="DoorDone" type="Control" parent="."]
margin_left = 143.002
margin_top = 44.0007
margin_right = 183.002
margin_bottom = 84.0007
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="DoorDone"]
margin_top = 2.18921
margin_right = 41.0
margin_bottom = 13.1892
rect_rotation = -18.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Label" parent="DoorDone"]
margin_left = 3.0
margin_top = 1.18921
margin_right = 39.0
margin_bottom = 11.1892
rect_rotation = -18.652
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.87451, 0, 0, 1 )
text = "Anxiety"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoorDone2" type="Control" parent="."]
margin_left = 205.002
margin_top = 44.0007
margin_right = 245.002
margin_bottom = 84.0007
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="DoorDone2"]
margin_top = 2.18921
margin_right = 41.0
margin_bottom = 13.1892
rect_rotation = -18.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Label" parent="DoorDone2"]
margin_left = 3.0
margin_top = 1.18921
margin_right = 39.0
margin_bottom = 11.1892
rect_rotation = -18.652
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.87451, 0, 0, 1 )
text = "Anxiety"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoorDone3" type="Control" parent="."]
margin_left = 270.002
margin_top = 44.0007
margin_right = 310.002
margin_bottom = 84.0007
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="DoorDone3"]
margin_top = 2.18921
margin_right = 41.0
margin_bottom = 13.1892
rect_rotation = -18.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Label" parent="DoorDone3"]
margin_left = 3.0
margin_top = 1.18921
margin_right = 39.0
margin_bottom = 11.1892
rect_rotation = -18.652
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.87451, 0, 0, 1 )
text = "Anxiety"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 31.4818, 75.7965 )
scale = Vector2( 1.05674, 1.20685 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 3.78523, 2.66686 )
current = true
zoom = Vector2( 0.6, 0.9 )

[node name="AnxietyMeter" parent="Player/Camera2D" instance=ExtResource( 12 )]
margin_left = 11.8436
margin_top = -65.4721
margin_right = 11.8436
margin_bottom = -65.4721
rect_scale = Vector2( 0.261429, 0.298159 )

[node name="SpeechText" parent="Player/Camera2D" instance=ExtResource( 6 )]
margin_left = -89.5722
margin_top = 16.228
margin_right = -89.5722
margin_bottom = 16.228
rect_scale = Vector2( 0.56, 0.741 )

[node name="EnterName" type="Control" parent="Player/Camera2D/SpeechText"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterNameText" type="Label" parent="Player/Camera2D/SpeechText/EnterName"]
margin_left = 70.0
margin_top = -0.706551
margin_right = 240.0
margin_bottom = 15.2934
custom_fonts/font = ExtResource( 7 )
text = "For I am the great..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressEnterSave" type="Label" parent="Player/Camera2D/SpeechText/EnterName"]
margin_left = 70.0
margin_top = 15.0
margin_right = 240.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 9 )
text = "(Press Enter to save name)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameTooShort" type="Label" parent="Player/Camera2D/SpeechText/EnterName"]
modulate = Color( 0.713726, 0, 0, 1 )
anchor_left = -0.0153793
anchor_right = -0.0153793
margin_left = 22.631
margin_top = 53.8184
margin_right = 303.631
margin_bottom = 69.8184
custom_fonts/font = ExtResource( 8 )
text = "Your name is too short ;c Please Enter a longer name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Player/Camera2D/SpeechText/EnterName"]
margin_left = 40.0
margin_top = 28.0
margin_right = 269.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 7 )
align = 1
max_length = 30
clear_button_enabled = true
placeholder_text = "Please enter your name..."
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Door1" to="." method="_on_Door1_area_entered"]
[connection signal="area_exited" from="Door1" to="." method="_on_Door1_area_exited"]
[connection signal="area_entered" from="Door2" to="." method="_on_Door2_area_entered"]
[connection signal="area_exited" from="Door2" to="." method="_on_Door2_area_exited"]
[connection signal="area_entered" from="Door3" to="." method="_on_Door3_area_entered"]
[connection signal="area_exited" from="Door3" to="." method="_on_Door3_area_exited"]
[connection signal="text_entered" from="Player/Camera2D/SpeechText/EnterName/LineEdit" to="." method="_on_LineEdit_text_entered"]

[editable path="Player/Camera2D/SpeechText"]
